# seminars

./: .gitmodules  CMakeLists.txt  Makefile  README.md
concepts/: CMakeLists.txt  README.md  archetype_example.cpp  creation_example.cpp  usage_example.cpp
opencode9_concept_overloading/: CMakeLists.txt  walkthrough.md
opencode9_concept_overloading/use_cases/: distance.cpp  find_disjoint.cpp
rvalue_references/: CMakeLists.txt  template_deduction.cpp  value_categories.cpp
